<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>

    <TextView
        android:id="@+id/textview_temperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/temperatura"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edittext_temperatura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_temperatura"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_temperatura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_temperatura"/>

    <Button
        android:id="@+id/btn_celsius"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/celsius"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@+id/btn_fahrenheit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizon"/>

    <Button
        android:id="@+id/btn_fahrenheit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/Fahrenheit"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@+id/btn_kelvin"
        app:layout_constraintStart_toEndOf="@+id/btn_celsius"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizon"/>

    <Button
        android:id="@+id/btn_kelvin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/kelvin"
        android:textAllCaps="true"
        app:layout_constraintStart_toEndOf="@+id/btn_fahrenheit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizon"/>


    <TextView
        android:id="@+id/textview_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/saida"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizon2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textview_resultado2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/saida"
        app:layout_constraintEnd_toEndOf="@+id/textview_resultado"
        app:layout_constraintStart_toStartOf="@+id/textview_resultado"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizon2"/>






</androidx.constraintlayout.widget.ConstraintLayout>